# rust_cdn

./: Cargo.toml  test.ts
src/: main.rs
